objects/Plate__c.object
<CustomObject>
    <fields>
        <fullName>Last_Touch_Point_Date__c</fullName>
        <label>Last Touch Point Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_From__c</fullName>
        <label>Last Touch Point From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate_Type__c</fullName>
        <label>Plate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Crown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_End_Date__c</fullName>
        <label>Registration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Plate_Number__c</fullName>
        <externalId>true</externalId>
        <label>Registration Plate Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Registration_Start_Date__c</fullName>
        <label>Registration Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plate</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Plate_Type__c</columns>
        <columns>Registration_Start_Date__c</columns>
        <columns>Registration_End_Date__c</columns>
        <columns>Registration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registration_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Registration_Start_Date__c</columns>
        <columns>Registration_End_Date__c</columns>
        <columns>Registration_Status__c</columns>
        <columns>Plate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Plate_Type__c</columns>
        <columns>Registration_Start_Date__c</columns>
        <columns>Registration_End_Date__c</columns>
        <columns>Registration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registration_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled</label>
    </listViews>
    <listViews>
        <fullName>Lapsed</fullName>
        <columns>NAME</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Plate_Type__c</columns>
        <columns>Registration_Start_Date__c</columns>
        <columns>Registration_End_Date__c</columns>
        <columns>Registration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registration_Status__c</field>
            <operation>equals</operation>
            <value>Lapsed</value>
        </filters>
        <label>Lapsed</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>